# mischief

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  dev_tracker.py  implementation_plan.md  make_gallery.py  make_webreport.py  pyproject.toml  settings.toml  test_authorizer.py  test_container_binding.py  test_declarative.py  test_directory.py  test_gallery.py  test_hub_sync.py  test_ledger_audit.py  test_microapp.py  test_rbac.py  test_reactive.py  test_starter.py  test_trust_store.py  test_webreport.py  verify_microapp.py  walkthrough.md
.github/workflows/: ci-package.yml
docs/: ADMIN_GUIDE.md  USER_GUIDE.md  declarative-ui-notes.md
scripts/: brand_installer.py  make_icons.py  make_installer_art.py
src/mschf/: __init__.py  __main__.py  app.py  audit.py  declarative.py  directory.py  gallery.py  gen_cert.py  hub.py  identity.py  msf.py  paths.py  sandbox.py  starter.py  storage.py  sync.py  syncstate.py  trust.py  webreport.py
src/mschf.dist-info/: METADATA  WHEEL  top_level.txt
src/mschf/plugins/: base.py  manager.py
src/mschf/plugins/auth/: __init__.py
src/mschf/plugins/auth/providers/: base.py  oauth.py  oidc.py  passkey.py  password.py
